# sennen

./: .gitignore  LICENSE  README.md  REMIX.md  pyproject.toml  setup
.agents/plugins/: marketplace.json
sennen/: SKILL.md  __init__.py
sennen/.claude-plugin/: plugin.json
sennen/.codex-plugin/: plugin.json
sennen/commands/: baseline.md  data.md  defects.md  doctor.md  experiment.md  explain.md  join.md  metrics.md  plan.md  preprocess.md  review.md  split.md  visualize.md
sennen/scripts/: __init__.py  init_project.py  install_local.py  install_personal.py  install_support.py
sennen/skills/baseline/: SKILL.md
sennen/skills/data/: SKILL.md
sennen/skills/db-alphafold/: SKILL.md
sennen/skills/db-biorxiv/: SKILL.md
sennen/skills/db-chembl/: SKILL.md
sennen/skills/db-clinicaltrials/: SKILL.md
sennen/skills/db-clinpgx/: SKILL.md
sennen/skills/db-clinvar/: SKILL.md
sennen/skills/db-cosmic/: SKILL.md
sennen/skills/db-drugbank/: SKILL.md
sennen/skills/db-ena/: SKILL.md
sennen/skills/db-ensembl/: SKILL.md
sennen/skills/db-fda/: SKILL.md
sennen/skills/db-gene/: SKILL.md
sennen/skills/db-geo/: SKILL.md
sennen/skills/db-gwas/: SKILL.md
sennen/skills/db-hmdb/: SKILL.md
sennen/skills/db-kegg/: SKILL.md
sennen/skills/db-metabolomics-workbench/: SKILL.md
sennen/skills/db-opentargets/: SKILL.md
sennen/skills/db-pdb/: SKILL.md
sennen/skills/db-pubchem/: SKILL.md
sennen/skills/db-pubmed/: SKILL.md
sennen/skills/split/: SKILL.md
tests/: test_install_support.py  test_sen_remix_asset.py  test_setup.py
tests/skills/: test_sen_data_ct.py
(+26 files in other folders)
